Bubble Sass refactoring.
Invitation bubble work ongoing.

Guest robot update.

--- a/resources/private/common-html/sass/main.scss
+++ b/resources/private/common-html/sass/main.scss
@@ -100,6 +100,7 @@
 @import "partials/_modal";
 @import "partials/_map";
 @import "partials/_errors";
+@import "partials/_bubble";
 @import "partials/_help";
 @import "partials/_autocomplete";
 @import "partials/_tree";
