--- a/resources/private/common-html/sass/partials/_bubble.scss
+++ b/resources/private/common-html/sass/partials/_bubble.scss
@@ -53,9 +53,17 @@
   $pad: 20px;
 
   padding: $pad $pad $pad $pad;
+  margin-bottom: $pad;
   position: relative;
   background: $bg-color;
   border: 1px solid $border-color;
+
+  .autocomplete-component {
+    margin: {
+    top: 10px;
+    bottom: 10px;
+  }
+  }
 
   .left-buttons {
     margin-top: $pad;
