Style fix for invite buttons.
Stacked--inline did not work well in Firefox.

--- a/resources/private/common-html/sass/partials/_buttons.scss
+++ b/resources/private/common-html/sass/partials/_buttons.scss
@@ -456,6 +456,7 @@ i.toggle {
 .stacked--inline {
   @include stacked;
   display: inline-table;
+  vertical-align: top;
 }
 
 // Only inner margins
