--- a/resources/public/lp-static/css/main.css
+++ b/resources/public/lp-static/css/main.css
@@ -1,4 +1,4 @@
-@import url('main-blessed1.css?z=1454922994342');
+@import url('main-blessed1.css?z=1455117287240');
 
 
 /* line 213, ../../../private/common-html/sass/partials/_tables.scss */
@@ -591,9 +591,9 @@ ul.tabs {
 }
 
 /* line 264, ../../../private/common-html/sass/partials/_conversation.scss */
-.comment-bubble.attachment > .content > span,
-.comment-bubble-authority.attachment > .content > span {
-  white-space: normal !important;
+.comment-bubble.attachment > .content > span.target,
+.comment-bubble-authority.attachment > .content > span.target {
+  white-space: normal;
 }
 
 /* line 272, ../../../private/common-html/sass/partials/_conversation.scss */
