using form-grids to style editor bubble

--- a/resources/public/lp-static/css/main.css
+++ b/resources/public/lp-static/css/main.css
@@ -1,5 +1,35 @@
-@import url('main-blessed1.css?z=1455022469165');
+@import url('main-blessed1.css?z=1455112771860');
 
+
+/* line 188, ../../../private/common-html/sass/partials/_tables.scss */
+.scroll-91em {
+  max-height: 91em;
+  overflow-y: auto;
+}
+
+/* line 188, ../../../private/common-html/sass/partials/_tables.scss */
+.scroll-92em {
+  max-height: 92em;
+  overflow-y: auto;
+}
+
+/* line 188, ../../../private/common-html/sass/partials/_tables.scss */
+.scroll-93em {
+  max-height: 93em;
+  overflow-y: auto;
+}
+
+/* line 188, ../../../private/common-html/sass/partials/_tables.scss */
+.scroll-94em {
+  max-height: 94em;
+  overflow-y: auto;
+}
+
+/* line 188, ../../../private/common-html/sass/partials/_tables.scss */
+.scroll-95em {
+  max-height: 95em;
+  overflow-y: auto;
+}
 
 /* line 188, ../../../private/common-html/sass/partials/_tables.scss */
 .scroll-96em {
