--- a/resources/private/common-html/sass/partials/_forms.scss
+++ b/resources/private/common-html/sass/partials/_forms.scss
@@ -830,6 +830,42 @@ div.sticky .form-approval-status.no-border-bottom.own-line {
   }
 }
 
+.container-bubble {
+  display: block;
+  position: relative;
+  float: left;
+  box-sizing: border-box;
+  background-color: white;
+  width: 100%;
+  border-radius: 2px;
+  border: 1px solid $orange-light;
+  padding: $marginS $marginS $marginS $marginS;
+  margin-top: 15px;
+  &:after, &:before {
+             bottom: 100%;
+             left: 5%;
+             border: solid transparent;
+             content: " ";
+             height: 0;
+             width: 0;
+             position: absolute;
+             pointer-events: none;
+           }
+
+  &:after {
+    border-color: rgba(255, 255, 255, 0);
+    border-bottom-color: #fff;
+    border-width: 10px;
+    margin-left: -10px;
+  }
+  &:before {
+    border-color: transparentize( $orange-light, 1 );
+    border-bottom-color: $orange-light;
+    border-width: 11px;
+    margin-left: -11px;
+  }
+}
+
 .description-bubble.is-closed {
   display: none;
 }
