--- a/resources/private/common-html/sass/partials/_bubble.scss
+++ b/resources/private/common-html/sass/partials/_bubble.scss
@@ -71,13 +71,16 @@
 
   label.mandatory:after {
     content: " *";
-    color: $orange;
+    color: $input-required-border-color;
   }
   input[type=text], textarea {
     box-sizing: border-box;
     width: 100%;
     padding: 4px;
     display: block;
+    &:focus {
+      border-color: $input-focus-border-color;
+    }
   }
 
   textarea {
@@ -85,7 +88,7 @@
   }
 
   input.mandatory {
-    border-color: $orange;
+    border-color: $input-required-border-color;
     margin-bottom: $pad;
   }
 
@@ -100,7 +103,7 @@
     tr {
       background-color: initial;
       td {
-        border: 1px solid $orange;
+        border: 1px solid $input-required-border-color;
         background-color: none;
       }
       td.full {
