A little bit of air between text and table in sign attachment dialog.

--- a/resources/public/lp-static/css/main.css
+++ b/resources/public/lp-static/css/main.css
@@ -1,4 +1,4 @@
-@import url('main-blessed1.css?z=1455121037517');
+@import url('main-blessed1.css?z=1455277561847');
 
 
 /* line 188, ../../../private/common-html/sass/partials/_tables.scss */
@@ -39,7 +39,7 @@
 
 /* line 194, ../../../private/common-html/sass/partials/_tables.scss */
 .header-table {
-  margin: 0;
+  margin-top: 30px;
 }
 /* line 196, ../../../private/common-html/sass/partials/_tables.scss */
 .header-table table {
