--- a/resources/private/common-html/sass/partials/_forms.scss
+++ b/resources/private/common-html/sass/partials/_forms.scss
@@ -1333,3 +1333,33 @@ $max-columns: 12;
     }
   }
 }
+
+.identifier-editors {
+  input[type=text], input[type=password], select, textarea {
+    padding: 0 $marginM;
+    min-height: $grid-input-height;
+    height: $grid-input-height;
+    box-sizing: border-box;
+    font-size: $grid-font-size;
+    color: $input-color;
+    border: 1px solid $input-border-color;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0px;
+    -moz-appearance:none;
+
+    margin: 0 $marginS;
+
+    &:focus {
+      color: $input-focus-color;
+      border-color: $input-focus-border-color;
+    }
+  }
+  .identifier-component {
+    margin: $marginM $marginM;
+  }
+  button {
+    margin: 0 $marginM;
+  }
+
+}
+
