--- a/resources/private/common-html/sass/partials/_forms.scss
+++ b/resources/private/common-html/sass/partials/_forms.scss
@@ -1348,7 +1348,9 @@ $max-columns: 12;
     -moz-appearance:none;
 
     margin: 0 $marginS;
-
+    &.required {
+      border-color: lighten($lp-orange, 10%);
+    }
     &:focus {
       color: $input-focus-color;
       border-color: $input-focus-border-color;
@@ -1360,6 +1362,12 @@ $max-columns: 12;
   button {
     margin: 0 $marginM;
   }
-
+  label.required {
+    color: $lp-orange;
+    &:after {
+      content: "*";
+      display: inline;
+    }
+  }
 }
 
