--- a/resources/private/common-html/sass/partials/_bubble.scss
+++ b/resources/private/common-html/sass/partials/_bubble.scss
@@ -99,16 +99,21 @@
     padding: $pad;
   }
 
-  table.mandatory {
+  table {
     tr {
       background-color: initial;
       td {
-        border: 1px solid $input-required-border-color;
         background-color: none;
       }
       td.full {
         width: 33%;
       }
+    }
+  }
+
+  table.mandatory {
+    td {
+      border: 1px solid $input-required-border-color;
     }
   }
 }
