--- a/resources/public/lp-static/css/main.css
+++ b/resources/public/lp-static/css/main.css
@@ -1,4 +1,4 @@
-@import url('main-blessed1.css?z=1456078372403');
+@import url('main-blessed1.css?z=1456231258046');
 
 
 /* line 188, ../../../private/common-html/sass/partials/_tables.scss */
@@ -5192,57 +5192,38 @@ td.comment-text {
   margin-bottom: 24px;
 }
 
+/* line 1, ../../../private/common-html/sass/views/_mypage.scss */
+#mypage .accordion-container {
+  padding: 0 24px;
+}
 /* line 2, ../../../private/common-html/sass/views/_mypage.scss */
-#mypage .button-group {
+#mypage .accordion-container .button-group {
   margin: 20px;
   position: relative;
 }
-
-/*  */
-/* line 9, ../../../private/common-html/sass/views/_mypage.scss */
-#own-info-form {
-  padding: 0 24px;
-}
-/* line 11, ../../../private/common-html/sass/views/_mypage.scss */
-#own-info-form .architect-toggle, #own-info-form .allowDirectMarketing-toggle {
+/* line 7, ../../../private/common-html/sass/views/_mypage.scss */
+#mypage .accordion-container .architect-toggle, #mypage .accordion-container .allowDirectMarketing-toggle {
   height: 55px;
   margin: 9px 0;
   display: block;
   width: 100%;
 }
-/* line 17, ../../../private/common-html/sass/views/_mypage.scss */
-#own-info-form .architect-toggle label, #own-info-form .architect-toggle input, #own-info-form .allowDirectMarketing-toggle label, #own-info-form .allowDirectMarketing-toggle input {
+/* line 13, ../../../private/common-html/sass/views/_mypage.scss */
+#mypage .accordion-container .architect-toggle label, #mypage .accordion-container .architect-toggle input, #mypage .accordion-container .allowDirectMarketing-toggle label, #mypage .accordion-container .allowDirectMarketing-toggle input {
   display: inline;
   width: 3.75em;
 }
-/* line 21, ../../../private/common-html/sass/views/_mypage.scss */
-#own-info-form .architect-toggle input, #own-info-form .allowDirectMarketing-toggle input {
+/* line 17, ../../../private/common-html/sass/views/_mypage.scss */
+#mypage .accordion-container .architect-toggle input, #mypage .accordion-container .allowDirectMarketing-toggle input {
   margin-right: 12px;
   display: inline;
 }
-/* line 26, ../../../private/common-html/sass/views/_mypage.scss */
-#own-info-form .form-group {
+/* line 22, ../../../private/common-html/sass/views/_mypage.scss */
+#mypage .accordion-container .form-group {
   padding: 12px;
 }
 
-/* line 31, ../../../private/common-html/sass/views/_mypage.scss */
-#pw-form {
-  padding: 0 24px;
-}
-/* line 34, ../../../private/common-html/sass/views/_mypage.scss */
-#pw-form .form-group {
-  padding: 12px;
-}
-/* line 37, ../../../private/common-html/sass/views/_mypage.scss */
-#pw-form .form-entry {
-  height: 78px;
-}
-
-/* line 42, ../../../private/common-html/sass/views/_mypage.scss */
-#mypage-register-company, #mypage-company {
-  padding: 0 24px;
-}
-/* line 46, ../../../private/common-html/sass/views/_mypage.scss */
+/* line 30, ../../../private/common-html/sass/views/_mypage.scss */
 #mypage-register-company p a, #mypage-company p a {
   color: #f39129;
   text-decoration: none;
@@ -5260,11 +5241,6 @@ td.comment-text {
 #mypage-register-company p a:active, #mypage-company p a:active {
   color: #fbc732;
   text-decoration: underline;
-}
-
-/* line 52, ../../../private/common-html/sass/views/_mypage.scss */
-.architect-info {
-  transition: height 2s;
 }
 
 /* line 1, ../../../private/common-html/sass/views/_admin.scss */
