--- a/resources/public/lp-static/css/main.css
+++ b/resources/public/lp-static/css/main.css
@@ -1,4 +1,4 @@
-@import url('main-blessed1.css?z=1456402970143');
+@import url('main-blessed1.css?z=1456736701349');
 
 
 /* line 188, ../../../private/common-html/sass/partials/_tables.scss */
@@ -1787,25 +1787,29 @@ ul.no-bullets {
 .accordion div.sticky span.icons .rejected {
   padding-right: 0;
 }
-/* line 33, ../../../private/common-html/sass/partials/_accordion.scss */
+/* line 32, ../../../private/common-html/sass/partials/_accordion.scss */
+.accordion div.sticky .identifier-component .form-indicator {
+  right: -100px;
+}
+/* line 38, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion .accordion-toggle > button, .accordion button.accordion-toggle {
   width: 100%;
   margin-bottom: 0 !important;
 }
-/* line 35, ../../../private/common-html/sass/partials/_accordion.scss */
+/* line 40, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion .accordion-toggle > button span.bar-text, .accordion button.accordion-toggle span.bar-text {
   width: 100%;
   text-transform: uppercase;
 }
-/* line 43, ../../../private/common-html/sass/partials/_accordion.scss */
+/* line 48, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion div.sticky button.positive > span.icons > .approved {
   display: table-cell;
 }
-/* line 47, ../../../private/common-html/sass/partials/_accordion.scss */
+/* line 52, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion div.sticky button.rejected > span.icons > .rejected {
   display: table-cell;
 }
-/* line 53, ../../../private/common-html/sass/partials/_accordion.scss */
+/* line 58, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion .accordion_content {
   display: none;
   padding-top: 6px;
@@ -1813,43 +1817,43 @@ ul.no-bullets {
   border: 1px solid #dddddd;
   border-top: none;
 }
-/* line 62, ../../../private/common-html/sass/partials/_accordion.scss */
+/* line 67, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion .accordion_content .accordion-content-part {
   margin-left: 12px;
   margin-right: 12px;
   margin-bottom: 12px;
 }
-/* line 67, ../../../private/common-html/sass/partials/_accordion.scss */
+/* line 72, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion .accordion_content .accordion-fields {
   width: 100%;
 }
-/* line 70, ../../../private/common-html/sass/partials/_accordion.scss */
+/* line 75, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion .accordion_content .accordion-fields h2 {
   color: black;
 }
-/* line 74, ../../../private/common-html/sass/partials/_accordion.scss */
+/* line 79, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion .accordion_content .accordion-fields .authority-accept-fields h2 {
   background: #f6f6f6;
 }
-/* line 78, ../../../private/common-html/sass/partials/_accordion.scss */
+/* line 83, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion .accordion_content .accordion-fields h3 {
   margin-top: 12px;
 }
-/* line 81, ../../../private/common-html/sass/partials/_accordion.scss */
+/* line 86, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion .accordion_content .accordion-fields .form-group {
   margin-top: 6px;
 }
-/* line 87, ../../../private/common-html/sass/partials/_accordion.scss */
+/* line 92, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion .accordion_content.expanded {
   display: block;
 }
 
-/* line 92, ../../../private/common-html/sass/partials/_accordion.scss */
+/* line 97, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion-fields > .button-group:last-child {
   border-bottom: none;
 }
 
-/* line 96, ../../../private/common-html/sass/partials/_accordion.scss */
+/* line 101, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion-indicator {
   z-index: 12000;
   width: 112px;
@@ -1858,25 +1862,25 @@ ul.no-bullets {
   padding: 0 24px 0 0;
   margin-left: 12px;
 }
-/* line 104, ../../../private/common-html/sass/partials/_accordion.scss */
+/* line 109, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion-indicator .icon {
   display: none;
   background-image: url("/lp-static/img/icons-sprite-1.18.png");
   background-repeat: no-repeat;
 }
-/* line 109, ../../../private/common-html/sass/partials/_accordion.scss */
+/* line 114, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion-indicator.accordion-input-saved .icon {
   display: inline-block;
   background-position: 4px -2499px;
   border-right: none;
 }
-/* line 116, ../../../private/common-html/sass/partials/_accordion.scss */
+/* line 121, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion-indicator.accordion-input-warn .icon {
   display: inline-block;
   background-position: 4px -3199px;
   border-right: none;
 }
-/* line 123, ../../../private/common-html/sass/partials/_accordion.scss */
+/* line 128, ../../../private/common-html/sass/partials/_accordion.scss */
 .accordion-indicator.accordion-input-err .icon {
   display: inline-block;
   background-position: 4px -2399px;
