--- a/resources/public/lp-static/css/main-blessed1.css
+++ b/resources/public/lp-static/css/main-blessed1.css
@@ -7024,7 +7024,7 @@ div.alleYli-radioGroup {
   border-color: #fbc732;
 }
 /* line 1359, ../../../private/common-html/sass/partials/_forms.scss */
-.identifier-editors .identifier-component {
+.identifier-editors > div {
   margin: 12px 12px;
 }
 /* line 1362, ../../../private/common-html/sass/partials/_forms.scss */
